# wfcop

./: .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml  requirements.txt
.test_tmp19/test_analysis_proposes_exact_o0/: intelligence.sqlite3
.test_tmp19/test_approved_analysis_is_save0/: approved.sqlite3
.test_tmp19/test_create_flowmind_workflow_0/: flowmind.sqlite3
.test_tmp19/test_create_stripe_to_slack_wo0/: workflows.sqlite3
.test_tmp19/test_delete_workflow_endpoint_0/: delete-endpoint.sqlite3  flowmind.sqlite3
.test_tmp19/test_delete_workflow_removes_r0/: flowmind.sqlite3
.test_tmp19/test_executor_uses_saved_gmail0/: flowmind.sqlite3
.test_tmp19/test_explain_returns_human_rea0/: workflows.sqlite3
.test_tmp19/test_fix_adds_missing_slack_ch0/: workflows.sqlite3
.test_tmp19/test_gmail_integration_rejects0/: gmail-password.sqlite3
.test_tmp19/test_gmail_run_fails_honestly_0/: flowmind.sqlite3
.test_tmp19/test_google_callback_creates_s0/: google-auth.sqlite3
.test_tmp19/test_google_start_uses_forward0/: oauth-origin.sqlite3
.test_tmp19/test_integrations_are_masked_a0/: integrations.sqlite3
.test_tmp19/test_jobs_email_instruction_ge0/: workflows.sqlite3
.test_tmp19/test_jobs_filter_matches_subje0/: workflows.sqlite3
frontend/: server.js
src/copilot_api/: __init__.py  auth.py  catalog.py  (+12 more)
tests/: test_ai_integration.py  test_conversation_memory.py  test_copilot.py  test_copilot_api.py  test_flowmind.py  test_intelligence.py  test_persistence.py  test_planning_streaming.py  test_validation.py  test_workflow_diff.py
(+15 files in other folders)
