[project]
name = "ai-workflow-copilot"
version = "0.1.0"
description = "Backend service for an AI workflow copilot assignment"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.35.0",
  "httpx>=0.27.0,<0.29.0",
  "cryptography>=42.0.0,<46.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
